--- a/Ks3SdkAndroid/demo/AndroidManifest.xml
+++ b/Ks3SdkAndroid/demo/AndroidManifest.xml
@@ -16,6 +16,7 @@
 
     <application
         android:allowBackup="true"
+        android:name="com.ks3.demo.main.CustomApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
