--- a/Ks3SdkAndroid/ks3-android-sdk/AndroidManifest.xml
+++ b/Ks3SdkAndroid/ks3-android-sdk/AndroidManifest.xml
@@ -1,8 +1,8 @@
-AndroidManifest.xml<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ksyun.ks3"
-    android:versionCode="2"
-    android:versionName="1.2.0" >
+    android:versionCode="5"
+    android:versionName="1.4.0" >
 
     <uses-sdk
         android:minSdkVersion="8"
