--- a/Ks3SdkAndroid/demo/AndroidManifest.xml
+++ b/Ks3SdkAndroid/demo/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ks3.demo.main"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -12,15 +12,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,17 +30,19 @@
         </activity>
         <activity
             android:name=".UploadActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".DownloadActivity"
-            android:label="@string/app_name" >
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".RESTAPITestResult"
-            android:label="@string/title_activity_main" >
-        </activity>
-        <service android:name=".TransferService" android:exported="false"/>
+            android:label="@string/title_activity_main" />
+
+        <service
+            android:name=".TransferService"
+            android:exported="false" />
+
+        <activity android:name=".MultiUploadActivity"></activity>
     </application>
 
 </manifest>
